@@ -7,7 +7,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 /**
  * In-memory implementation of the ModuleBlockRegistry.
@@ -35,14 +34,14 @@ public class DefaultModuleBlockRegistry implements ModuleBlockRegistry {
     public List<ModuleBlockDescriptor> getBlocksByModule(String moduleId) {
         return blocks.values().stream()
                 .filter(b -> moduleId.equals(b.getModuleId()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ModuleBlockDescriptor> getBlocksByType(ModuleBlockDescriptor.BlockType type) {
         return blocks.values().stream()
                 .filter(b -> type.equals(b.getType()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
